added Rosenhead to papers

--- a/papers.bib
+++ b/papers.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.5.
+% This file was created with JabRef 2.7b.
 % Encoding: UTF-8
 
 @ARTICLE{2001,
@@ -1055,6 +1055,18 @@
   file = {:LatticeBoltzmann/multiphase/Reis_2007.pdf:PDF},
   owner = {philipp},
   timestamp = {2012.09.12}
+}
+
+@ARTICLE{Rosenhead1954,
+  author = {L. Rosenhead},
+  title = {The second coefficient of viscosity: A brief review of fundamentals},
+  journal = {Proceedings of the Royal Society A},
+  year = {1954},
+  volume = {226},
+  pages = {1},
+  file = {:/other/Proc. R. Soc. Lond. A-1954-Rosenhead-1-6.pdf:PDF},
+  owner = {philipp},
+  timestamp = {2014.01.03}
 }
 
 @ARTICLE{Rothman1988,
