Bulk viscosity festgelegt

--- a/Anmerkungen.tex
+++ b/Anmerkungen.tex
@@ -684,7 +684,7 @@ Mit der Stokes-Hypothese wird für dünne einatomige Gase \cite{Graves1999}:
 \end{equation}
 Die Volumenviskosität wäre damit $\mu' = - \frac{2}{3} \mu$. Da diese Hypothese aber nur selten gilt, wird häufig auf experimntelle Werte zurück gegriffen.
 
-
+Hier wird der Wert $\mu' / \mu \approx 2$ für Wasser \cite{Rosenhead1954} verwendet.
 
 \subsection{Berechnung des Druckes}
 Aus der Spannungsmatrix \eqref{eq:Spannungsmatrix} kann außerdem der mechanische Druck im Fluid bestimmt werden.
@@ -700,7 +700,7 @@ Die partiellen Ableitungen von $u$ können jeweils durch einen mittleren Differe
  \left. \frac{\partial u(x)}{\partial x}\right|_{x_0} = \frac{u(x_0 + \Delta x) - u(x_0 - \Delta x)}{2 \Delta x}
 \end{equation}
 
-
+Wird außerdem statt dem MRT-Schema ein BGK-Schema verwendet wird, ist $\mu' =  \mu$.
 
 
 
