--- a/Anmerkungen.tex
+++ b/Anmerkungen.tex
@@ -656,6 +656,9 @@ Dabei ist $\bar{F}$ direkt mit der Kraf $F$ verknüpft:
 % \end{equation}
 % Dieses $S$ kann bis auf den Wert von $\omega$ bereits vorher berechnet werden (vgl. \autoref{anhang:relaxationsmatrix}).
 
+\section{Wahl des Modus der Schwerkraft}
+Es gibt verschiedene Möglichkeiten die Schwerkraft ein zu bauen. 
+
 \appendix
 \chapter{Anhang}
 % \section{Relaxationsmatrix}
