--- a/appendix.tex
+++ b/appendix.tex
@@ -29,7 +29,7 @@ Bei Beachtung der sog. zweiten Viskosität $\nu'$ ergibt sich folgender Spannung
 (Bei Inkompressibilität wird $\nabla \cdot \vec{u} = 0$.)
 Im englischsprachigen Raum wird außerdem oft $K = \mu' + \frac{2}{3} \mu$ als \emph{bulk viscosity} bezeichnet, was mitunter zu Verwirrung führt \cite{Rosenhead1954}.
 Hier wird die bei Lattice Boltzmann Anwendungen übliche erste Benamung verwendet.
-Analog zur Scherviskosität gitl: $\mu' = \nu' \cdots \rho$.
+Analog zur Scherviskosität gilt: $\mu' = \nu' \cdots \rho$.
 
 \subsection{Wahl des Wertes}
 Für die Simulation muss letztlich ein Wert für $\zeta$ gewählt werden. 
@@ -37,7 +37,7 @@ Mit der Stokes-Hypothese wird für dünne einatomige Gase \cite{Graves1999}:
 \begin{equation}
  0 = \mu' + \frac{2}{3} \mu.
 \end{equation}
-Die Volumenviskosität wäre damit $\mu' = - \frac{2}{3} \mu$. Da diese Hypothese aber nur selten gilt, wird häufig auf experimntelle Werte zurück gegriffen.
+Die Volumenviskosität wäre damit $\mu' = - \frac{2}{3} \mu$. Da diese Hypothese aber nur selten gilt, wird häufig auf experimentelle Werte zurück gegriffen.
 
 Hier wird der Wert $\mu' / \mu \approx 2$ für Wasser \cite{Rosenhead1954} verwendet.
 
